--- a/configs/paths/default.yaml
+++ b/configs/paths/default.yaml
@@ -4,7 +4,8 @@
 root_dir: ${oc.env:PROJECT_ROOT}
 
 # path to data directory
-data_dir: ${paths.root_dir}/dataset/
+# data_dir: ${paths.root_dir}/dataset/
+data_dir: /mnt/scratch/jieyaqi/alaska/final/dataset
 
 # path to logging directory
 log_dir: ${paths.root_dir}/logs/
