--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,9 @@ python = ">=3.9,<3.12"
 rich = "^13.3.4"
 scipy = "^1.10.1"
 segmentation-models-pytorch = "^0.3.2"
-torch = "^2.0.0"
+torch = "2.0.0"
 nnAudio = "^0.3.2"
+obspy = "^1.4.0"
 
 [tool.poetry.group.train]
 optional = true
