--- a/configs/experiment/production_default_delta.yaml
+++ b/configs/experiment/production_default_delta.yaml
@@ -4,9 +4,9 @@
 # python train.py experiment=example
 
 defaults:
-  - override /trainer: multiple_gpu.yaml
+  - override /trainer: multiple_gpu_delta.yaml
   - override /logger: wandb.yaml
-  - override /hydra: slurm_2n8g_v100_expanse.yaml
+  - override /hydra: slurm_delta.yaml
 
 # all parameters below will be merged with parameters from default configurations set above
 # this allows you to overwrite only specified parameters
@@ -30,4 +30,4 @@ model:
   output_classes_weight: [0.20, 0.20, 0.60, 0.0]
 
 trainer:
-  max_epochs: 200
+  max_epochs: 160
